ent_conf = configuration_data()
ent_conf.set('PACKAGE', 'Jsonrpc-GLib')
ent_conf.set('PACKAGE_BUGREPORT', 'https://bugzilla.gnome.org/enter_bug.cgi?product=jsonrpc-glib')
ent_conf.set('PACKAGE_NAME', 'Template-GLib')
ent_conf.set('PACKAGE_STRING', 'jsonrpc-glib')
ent_conf.set('PACKAGE_TARNAME', 'jsonrpc-glib-' + meson.project_version())
ent_conf.set('PACKAGE_URL', 'http://wiki.gnome.org/Apps/Builder')
ent_conf.set('PACKAGE_VERSION', meson.project_version())
ent_conf.set('PACKAGE_API_VERSION', apiversion)
configure_file(input: 'gtkdocentities.ent.in', output: 'gtkdocentities.ent', configuration: ent_conf)

